# resilio-plus

./: .coverage  .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  AUDIT-RESILIO.md  BACKEND_FROZEN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FIX_REPORT_FRONTEND_S0.md  FRONTEND_AUDIT.md  FRONTEND_VAGUE1_POSTMORTEM.md  README.md  REVIEW_VAGUE2.md  SESSION_NOTES_APP_WORKS.md  SESSION_PLAN.md  SESSION_REPORT.md  SESSION_REPORT_FE_FIX_WEB_BUILD.md  SESSION_REPORT_FE_HOME_POLISH_NATIVETABS.md  SESSION_REPORT_FE_MOBILE_1.md  alembic.ini  conftest.py  docker-compose.prod.yml  docker-compose.yml  frontend-master-v1.md  package.json  pnpm-lock.yaml  pyproject.toml  resilio-master-v3.md  resilio-nutrition-coach-section.md  resilio_dev.db  schema-core.md  session-log.md  state.md  v3-claude-md-additions.md
.bmad-core/agents/: biking-coach.agent.md  energy-coach_agent.md  head-coach.agent.md  lifting-coach.agent.md  nutrition-coach.agent.md  recovery-coach.agent.md  running-coach.agent.md  swimming-coach.agent.md
.bmad-core/data/: README.md  cycling-zones.json  exercise-database.json  nutrition-targets.json  running-zones.json  swimming-benchmarks.json  volume-landmarks.json
.bmad-core/tasks/: README.md
.bmad-core/templates/: README.md
.bmad-core/workflows/: README.md
.github/pull_request_templates/: ui-mobile-rework.md
agents/: base_agent.py
agents/biking_coach/: agent.py  biking_coach_system_prompt.md  prescriber.py
agents/head_coach/: graph.py  merger.py  resolver.py  system_prompt.md  weekly_nodes.py
agents/lifting_coach/: __init__.py  agent.py  prescriber.py  system_prompt.md.txt
agents/nutrition_coach/: __init__.py  agent.py  nutrition_coach_system_prompt.md  prescriber.py
agents/recovery_coach/: agent.py  prescriber.py  recovery_coach_system_prompt.md
agents/running_coach/: __init__.py  agent.py  prescriber.py  running_coach_system_prompt.md
agents/swimming_coach/: agent.py  prescriber.py  swimming_coach_system_prompt.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_v3_athlete_state.py  0003_mode_and_external_plans.py  0004_energy_snapshot_scores.py  0007_food_cache.py  (+11 more)
api/: deps.py  endpoints_design.md  main.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
backend/: CONTRACT.md  README.md
connectors/: apple_health.py  fcen.py  fit.py  food_search.py  gpx.py  hevy.py  strava.py
core/: acwr.py  config.py  constraint_matrix.py  security.py  sync_scheduler.py  vdot.py  weekly_review.py
data/: agent_view_map.json  allostatic_weights.json  classify_intent_eval.jsonl  ea_thresholds.json  energy_coach_check_in_schema.json  exercise_database.json  fcen_nutrients.csv  food_database_cache.json  hormonal_adjustments.json  muscle_overlap.json  nutrition_targets.json  running_zones.json  vdot_paces.json  volume_landmarks.json
docs/: CHANGELOG.md  DEPENDENCIES.md  PRE-LAUNCH-AUDIT.md  V1.1-BACKLOG.md  agent-contracts.md  agent-flow-langgraph.md  agent-roster.md  agent-views-examples.md  agent-views.md  agents-validation-report.md  backend-audit-2026-04-17.md  backend-security-audit-2026-04-17.md  cleanup-2026-04-19.md  cleanup-plan-2026-04-19.md  p6-home-plan.md  p6-polish-diagnostic.md  p6-polish-plan.md  resilio-v3-master.md  sdk54-downgrade-plan.md  ui-audit-2026-04-12.md  ui-audit-mobile-2026-04-17.md  ui-docs-preparation-report.md  ui-integration-brainstorm-v1.md  ui-integration-corrections-v1.md  ui-rework-diagnostic.md  ui-rework-plan.md  user-flow-complete.md  v3-knowledge-files-specs.md
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  UI-RULES.md  gen-checkin-v2.js  gen-dashboard.js  gen-energy-v2.js  gen-energy.js  gen-history.js  gen-plan-v2.js  gen-plan-v3.js  gen-plan-v4.js  gen-plan-v5.js  gen-plan-v6.js  gen-plan-v7.js  gen-plan-v8.js  gen-plan-v9.js  gen-plan.js  gen-preview.js  normalize-icons.js  package-lock.json  package.json  playwright.config.ts  remove-bg.js  test_output.txt  vitest.config.ts
models/: athlete_state.py  database.py  db_session.py  schemas.py  views.py  weekly_review.py
resilio-archive/: README.md
scripts/: docker-entrypoint-backend.sh  entrypoint.sh  eval_classify_intent.py  gen_apple_health_fixture.py  smoke_test_runtime.py  start_dev.ps1  start_prod.sh
tests/: conftest.py  test_acwr.py  test_apple_health_connector.py  test_athlete_state.py  test_auth_route.py  test_base_agent.py  test_biking_agent.py  test_biking_prescriber.py  test_config.py  test_conflict_resolver.py  test_connector_routes.py  test_constraint_matrix.py  test_exercise_database.py  test_fcen_connector.py  test_file_routes.py  test_fit_connector.py  test_food_route.py  test_food_search_connector.py  test_gpx_connector.py  test_head_coach_graph.py  test_hevy_connector.py  test_lifting_agent.py  test_lifting_prescriber.py  test_nutrition_agent.py  test_nutrition_prescriber.py  test_plan_merger.py  test_plan_route.py  test_recovery_agent.py  test_recovery_prescriber.py  test_running_agent.py  test_running_prescriber.py  test_schemas.py  test_security.py  test_strava_connector.py  test_swimming_agent.py  test_swimming_prescriber.py  test_sync_scheduler.py  test_vdot.py  test_views.py  test_weekly_review.py  (+2 more)
training_books/: 80_20_matt_fitzgerald.md  advanced_marathoning_pete_pfitzinger.md  daniel_running_formula.md  faster_road_racing_pete_pfitzinger.md  run_less_run_faster_bill_pierce.md
(+819 files in other folders)
