[tool.poetry]
name = "resilio-plus"
version = "0.1.0"
description = "Multi-agent hybrid athlete coaching platform"
authors = ["Simon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.31.0"
alembic = "^1.14.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
anthropic = "^0.40.0"
langgraph = "^0.2.60"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
PyJWT = "^2.10.1"
# pwdlib remplace passlib (abandonné). Algorithme argon2 (recommandé vs bcrypt).
# Voir S11 pour l'implémentation auth.
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pandas = "^2.2.3"
numpy = "^2.2.0"
python-dateutil = "^2.9.0"
fitparse = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "UP", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
