[project]
name = "resilio"
version = "0.1.0"
description = "AI-powered adaptive running coach for multi-sport athletes"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{name = "Du Phan"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "python-dateutil>=2.8,<3.0",
    "httpx>=0.28.0,<1.0",
    "tenacity>=8.0.0,<9.0.0",
    "typer>=0.21.1,<0.22.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sqlalchemy (>=2.0,<3.0)",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=3.2.0,<5.0",
]

[project.scripts]
resilio = "resilio.cli:app"

[project.urls]
Repository = "https://github.com/du-phan/resilio-app"

[tool.poetry]
packages = [{include = "resilio"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
mypy = "^1.7"
ruff = "^0.1"
respx = ">=0.21,<1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
